--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="seed">#006a65</color>
+    <color name="md_theme_light_primary">#006A65</color>
+    <color name="md_theme_light_onPrimary">#FFFFFF</color>
+    <color name="md_theme_light_primaryContainer">#70F7EE</color>
+    <color name="md_theme_light_onPrimaryContainer">#00201E</color>
+    <color name="md_theme_light_secondary">#4A6361</color>
+    <color name="md_theme_light_onSecondary">#FFFFFF</color>
+    <color name="md_theme_light_secondaryContainer">#CCE8E5</color>
+    <color name="md_theme_light_onSecondaryContainer">#051F1E</color>
+    <color name="md_theme_light_tertiary">#48607B</color>
+    <color name="md_theme_light_onTertiary">#FFFFFF</color>
+    <color name="md_theme_light_tertiaryContainer">#D0E4FF</color>
+    <color name="md_theme_light_onTertiaryContainer">#001D34</color>
+    <color name="md_theme_light_error">#BA1A1A</color>
+    <color name="md_theme_light_errorContainer">#FFDAD6</color>
+    <color name="md_theme_light_onError">#FFFFFF</color>
+    <color name="md_theme_light_onErrorContainer">#410002</color>
+    <color name="md_theme_light_background">#FAFDFB</color>
+    <color name="md_theme_light_onBackground">#191C1C</color>
+    <color name="md_theme_light_surface">#FAFDFB</color>
+    <color name="md_theme_light_onSurface">#191C1C</color>
+    <color name="md_theme_light_surfaceVariant">#DAE5E3</color>
+    <color name="md_theme_light_onSurfaceVariant">#3F4947</color>
+    <color name="md_theme_light_outline">#6F7978</color>
+    <color name="md_theme_light_inverseOnSurface">#EFF1F0</color>
+    <color name="md_theme_light_inverseSurface">#2D3130</color>
+    <color name="md_theme_light_inversePrimary">#4FDAD2</color>
+    <color name="md_theme_light_shadow">#000000</color>
+    <color name="md_theme_light_surfaceTint">#006A65</color>
+    <color name="md_theme_light_outlineVariant">#BEC9C7</color>
+    <color name="md_theme_light_scrim">#000000</color>
+    <color name="md_theme_dark_primary">#4FDAD2</color>
+    <color name="md_theme_dark_onPrimary">#003734</color>
+    <color name="md_theme_dark_primaryContainer">#00504C</color>
+    <color name="md_theme_dark_onPrimaryContainer">#70F7EE</color>
+    <color name="md_theme_dark_secondary">#B0CCC9</color>
+    <color name="md_theme_dark_onSecondary">#1C3533</color>
+    <color name="md_theme_dark_secondaryContainer">#324B49</color>
+    <color name="md_theme_dark_onSecondaryContainer">#CCE8E5</color>
+    <color name="md_theme_dark_tertiary">#B0C9E7</color>
+    <color name="md_theme_dark_onTertiary">#19324A</color>
+    <color name="md_theme_dark_tertiaryContainer">#304962</color>
+    <color name="md_theme_dark_onTertiaryContainer">#D0E4FF</color>
+    <color name="md_theme_dark_error">#FFB4AB</color>
+    <color name="md_theme_dark_errorContainer">#93000A</color>
+    <color name="md_theme_dark_onError">#690005</color>
+    <color name="md_theme_dark_onErrorContainer">#FFDAD6</color>
+    <color name="md_theme_dark_background">#191C1C</color>
+    <color name="md_theme_dark_onBackground">#E0E3E2</color>
+    <color name="md_theme_dark_surface">#191C1C</color>
+    <color name="md_theme_dark_onSurface">#E0E3E2</color>
+    <color name="md_theme_dark_surfaceVariant">#3F4947</color>
+    <color name="md_theme_dark_onSurfaceVariant">#BEC9C7</color>
+    <color name="md_theme_dark_outline">#889391</color>
+    <color name="md_theme_dark_inverseOnSurface">#191C1C</color>
+    <color name="md_theme_dark_inverseSurface">#E0E3E2</color>
+    <color name="md_theme_dark_inversePrimary">#006A65</color>
+    <color name="md_theme_dark_shadow">#000000</color>
+    <color name="md_theme_dark_surfaceTint">#4FDAD2</color>
+    <color name="md_theme_dark_outlineVariant">#3F4947</color>
+    <color name="md_theme_dark_scrim">#000000</color>
+
+    <color name="priority_high">#E53935</color>
 </resources>
